close image tag error

--- a/session1.html
+++ b/session1.html
@@ -538,7 +538,7 @@ setup.checkForRepeats = (array,element) => {
   &lt;/div&gt;
   &lt;div class=&quot;nav-wrapper&quot;&gt;
     &lt;div class=&quot;nav-item logo&quot;&gt;
-          &lt;img src=&quot;./assets/img/triangles-08.png&quot;
+          &lt;img src=&quot;./assets/img/triangles-08.png&quot;&gt;
     &lt;/div&gt;
   &lt;/div&gt;&lt;/footer&gt;</tw-passagedata><tw-passagedata pid="5" name="lost" tags="" position="450,50" size="100,100">&lt;&lt;set $passage to &quot;lost&quot;&gt;&gt;&lt;&lt;include &quot;header&quot;&gt;&gt;
 &lt;main&gt;
