second session design clean up

--- a/session1.html
+++ b/session1.html
@@ -308,6 +308,7 @@ You have two options:
 &lt;div class=&quot;wrapper&quot;&gt;
 &lt;&lt;include &quot;header&quot;&gt;&gt;
   &lt;main class=&quot;speaking&quot;&gt;
+      &lt;div class=&quot;text-wrapper&quot;&gt;
   &lt;p&gt;
   If we were in the same space, no screen &lt;/p&gt;
 &lt;p&gt;  I’d ask about you &lt;/p&gt;
@@ -318,31 +319,35 @@ You have two options:
 &lt;p&gt;  But that doesn’t mean that everything is pre-decided &lt;/p&gt;
  &lt;p&gt; Or that there is nothing to be discovered - it’s just all up to you. &lt;/p&gt;
   &lt;&lt;button &quot;next&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;goto &quot;kaiIntro4&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
+  &lt;/div&gt;
   &lt;/main&gt;
+
     &lt;&lt;include &quot;footer&quot;&gt;&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="11" name="kaiIntro4" tags="nobr" position="100,225" size="100,100">&lt;&lt;set $passage to &quot;kaiIntro4&quot;&gt;&gt;
 &lt;div class=&quot;wrapper&quot;&gt;
 &lt;&lt;include &quot;header&quot;&gt;&gt;
   &lt;main class=&quot;speaking&quot;&gt;
-  
+      &lt;div class=&quot;text-wrapper&quot;&gt;
 &lt;p&gt;So, you&#39;ve maybe heard of Greenpeace before.&lt;/p&gt;
 &lt;p&gt;Greenpeace are a group of activists who take action against the climate and nature emergencies.&lt;/p&gt;
 &lt;p&gt;  They believe we are all Activists&lt;/p&gt;
 
   &lt;&lt;button &quot;next&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;goto &quot;kaiIntro5&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
+  &lt;/div&gt;
   &lt;/main&gt;
       &lt;&lt;include &quot;footer&quot;&gt;&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="12" name="kaiIntro5" tags="nobr" position="225,225" size="100,100">&lt;&lt;set $passage to &quot;kaiIntro5&quot;&gt;&gt;
 &lt;div class=&quot;wrapper&quot;&gt;
 &lt;&lt;include &quot;header&quot;&gt;&gt;
   &lt;main class=&quot;speaking&quot;&gt;
-
+    &lt;div class=&quot;text-wrapper&quot;&gt;
   &lt;p&gt;You may have heard of Coney too (quite possible not but ya know)&lt;/p&gt;
 &lt;p&gt;  Coney are a group of playful activists.&lt;/p&gt;
  &lt;p&gt; Coney create interactive performances, adventures, and games to make change through play.&lt;/p&gt;
 
 
   &lt;&lt;button &quot;next&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;goto &quot;CodewordMod1&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
+  &lt;/div&gt;
   &lt;/main&gt;
       &lt;&lt;include &quot;footer&quot;&gt;&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="13" name="CodewordMod1" tags="nobr" position="350,225" size="100,100">&lt;&lt;set $passage to &quot;CodewordMod1&quot;&gt;&gt;
@@ -388,6 +393,7 @@ You have two options:
   &lt;div class=&quot;wrapper&quot;&gt;
     &lt;&lt;include &quot;header&quot;&gt;&gt;
     &lt;main  class=&quot;speaking&quot;&gt;
+        &lt;div class=&quot;text-wrapper&quot;&gt;
     &lt;p&gt;Good find – we’ll need those codewords when we move forward. &lt;/p&gt;
     &lt;p&gt;This game is going to introduce a system to you all, and then give you the chance to play with it. &lt;/p&gt;
     
@@ -397,12 +403,14 @@ You have two options:
    &lt;p&gt; I’ll take us through. &lt;/p&gt;
     
    &lt;p&gt; When ready click &lt;&lt;button &quot;Move On&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;goto &quot;mod1a&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/p&gt;
+   &lt;/div&gt;
     &lt;/main&gt;
          &lt;&lt;include &quot;footer&quot;&gt;&gt;
   &lt;/div&gt;</tw-passagedata><tw-passagedata pid="15" name="mod1a" tags="nobr" position="600,225" size="100,100">&lt;&lt;set $passage to &quot;mod1a&quot;&gt;&gt;
 &lt;div class=&quot;wrapper&quot;&gt;
   &lt;&lt;include &quot;header&quot;&gt;&gt;
     &lt;main  class=&quot;speaking&quot;&gt;
+        &lt;div class=&quot;text-wrapper&quot;&gt;
  &lt;div id=&quot;mount&quot;&gt;
     &lt;p&gt;
     Great – Does everyone understand the rules of the game? &lt;/p&gt;
@@ -429,7 +437,7 @@ You have two options:
       &lt;&lt;button &quot;Next&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;goto &quot;mod1outroKai&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
     &lt;&lt;/replace&gt;&gt;&lt;&lt;/button&gt;&gt;
  &lt;/div&gt;
-  
+  &lt;/div&gt;
 
   &lt;/main&gt;
   &lt;&lt;include &quot;footer&quot;&gt;&gt;
@@ -437,6 +445,7 @@ You have two options:
 &lt;div class=&quot;wrapper&quot;&gt;
 &lt;&lt;include &quot;header&quot;&gt;&gt;
   &lt;main class=&quot;speaking&quot;&gt;
+      &lt;div class=&quot;text-wrapper&quot;&gt;
   &lt;p&gt;
   &lt;p&gt;I call this the ‘extraction economy game’ because it shows us just how the extraction economy works and what it can do &lt;/p&gt;
   &lt;p&gt;The &#39;extraction economy&#39; game lays bare our flawed system.&lt;/p&gt;
@@ -450,12 +459,14 @@ You have two options:
   &lt;p&gt;We’ll explore where some of that power has come from in the next session. &lt;/p&gt;
   &lt;/p&gt;
   &lt;&lt;button &quot;Next&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;goto &quot;mod1outro&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
+  &lt;/div&gt;
   &lt;/main&gt;
     &lt;&lt;include &quot;footer&quot;&gt;&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="17" name="mod1outro" tags="nobr" position="850,225" size="100,100">&lt;&lt;set $passage to &quot;mod1outro&quot;&gt;&gt;
 &lt;div class=&quot;wrapper&quot;&gt;
   &lt;&lt;include &quot;header&quot;&gt;&gt;
   &lt;main class=&quot;speaking scroll&quot;&gt;
+      &lt;div class=&quot;text-wrapper&quot;&gt;
   &lt;p&gt;
   Now we&#39;re going to leave the extraction economy for today, and instead look at what we’re doing here in this room, and what we’re going to do together in this project. &lt;/p&gt;
   
@@ -474,7 +485,7 @@ You have two options:
   &lt;p&gt;One I was involved in planning, creating and delivering.&lt;/p&gt;
   &lt;p&gt;The operation was called Codename: Violet. &lt;/p&gt;
   &lt;&lt;button &quot;Next&quot;&gt;&gt;&lt;&lt;set $mod1 to true&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;goto &quot;CodewordMod2&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
-  
+  &lt;/div&gt;
   &lt;/main&gt;
   &lt;&lt;include &quot;footer&quot;&gt;&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="18" name="CodewordMod2" tags="nobr" position="975,225" size="100,100">&lt;&lt;set $passage to &quot;CodewordMod2&quot;&gt;&gt;
@@ -517,6 +528,7 @@ You have two options:
 &lt;div class=&quot;wrapper&quot;&gt;
   &lt;&lt;include &quot;header&quot;&gt;&gt;
   &lt;main class=&quot;speaking&quot;&gt;
+      &lt;div class=&quot;text-wrapper&quot;&gt;
   &lt;p&gt;  Codename: Violet was an odd name. &lt;/p&gt;
  &lt;p&gt; Often names gives us a clue of what is to come&lt;/p&gt;
   &lt;p&gt;They tell us something… &lt;/p&gt;
@@ -527,22 +539,26 @@ You have two options:
  &lt;p&gt; It was chosen as the identity of the group. &lt;/p&gt;
  &lt;p&gt; So, we are going to work out our Codename. &lt;/p&gt;
    &lt;&lt;button &quot;Next&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;goto &quot;mod2introb&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
+   &lt;/div&gt;
   &lt;/main&gt;
   &lt;&lt;include &quot;footer&quot;&gt;&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="20" name="mod2introb" tags="nobr" position="1225,225" size="100,100">&lt;&lt;set $passage to &quot;mod2introb&quot;&gt;&gt;
 &lt;div class=&quot;wrapper&quot;&gt;
   &lt;&lt;include &quot;header&quot;&gt;&gt;
   &lt;main class=&quot;speaking&quot;&gt;
+      &lt;div class=&quot;text-wrapper&quot;&gt;
   &lt;p&gt;You’re going to find the Most Interesting Thing You Have In Common.&lt;/p&gt; 
   &lt;p&gt;Teacher, over to you for this one, all of the instructions are on the Mod Card. &lt;/p&gt;
   &lt;p&gt;When ready click &lt;&lt;button &quot;Move On&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;goto &quot;mod2outro&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
   &lt;/p&gt;
+  &lt;/div&gt;
   &lt;/main&gt;
      &lt;&lt;include &quot;footer&quot;&gt;&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="21" name="mod2outro" tags="nobr" position="100,350" size="100,100">&lt;&lt;set $passage to &quot;mod2outro&quot;&gt;&gt;
 &lt;div class=&quot;wrapper&quot;&gt;
   &lt;&lt;include &quot;header&quot;&gt;&gt;
   &lt;main class=&quot;speaking&quot;&gt;
+      &lt;div class=&quot;text-wrapper&quot;&gt;
   &lt;p&gt; Sometimes it’s useful to have a codename, to have a front &lt;/p&gt;
   &lt;p&gt;A codename can keep things secret or hidden if we need it &lt;/p&gt;
  &lt;p&gt; And a front allows us to play &lt;/p&gt;
@@ -555,18 +571,19 @@ You have two options:
  &lt;div class=&quot;enter-codename-wrapper &quot;&gt;
    &lt;&lt;textbox &quot;$codename&quot; &quot;&quot;&gt;&gt;
        &lt;&lt;button &quot;SEND TO CONEY &amp; GREENPEACE&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;goto &quot;mod2outrokai&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
+       &lt;/div&gt;
  &lt;/div&gt;
   &lt;/main&gt;
      &lt;&lt;include &quot;footer&quot;&gt;&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="22" name="mod2outrokai" tags="nobr" position="225,350" size="100,100">&lt;&lt;set $passage to &quot;mod2outrokai&quot;&gt;&gt;
 &lt;div class=&quot;wrapper&quot;&gt;
   &lt;&lt;include &quot;header&quot;&gt;&gt;
-  &lt;main class=&quot;speaking scroll&quot;&gt;
+  &lt;main class=&quot;speaking &quot;&gt;
  &lt;div class=&quot;codeword-title-wrapper indent&quot;&gt;
    &lt;h1 class=&quot;title&quot;&gt; Thank you! &lt;/h1&gt;
     &lt;h1 class=&quot;title&quot;&gt; $codename &lt;/h1&gt;
  &lt;/div&gt;
-  
+      &lt;div class=&quot;text-wrapper&quot;&gt;
   &lt;p&gt;That’s the end of the first session – we are off - on our way!&lt;/p&gt;
   &lt;p&gt;As we go through this process together, I&#39;m going to tell you more about playful climate activism and more about Codename: Violet.&lt;/p&gt;
  &lt;p&gt; For now, the codename is all I&#39;ll tell you, but at the start, it was all we knew too.&lt;/p&gt;
@@ -585,7 +602,7 @@ You have two options:
  &lt;p&gt; Take good care.&lt;/p&gt;
   
   &lt;&lt;button &quot;Next&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;set $mod2 to true&gt;&gt;&lt;&lt;goto &quot;landing&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
-
+&lt;/div&gt;
   &lt;/main&gt;
      &lt;&lt;include &quot;footer&quot;&gt;&gt;
 &lt;/div&gt;</tw-passagedata></tw-storydata>
