--- a/session2.html
+++ b/session2.html
@@ -294,30 +294,35 @@ You have two options:
   &lt;&lt;done&gt;&gt;&lt;&lt;include &quot;checkmodules&quot;&gt;&gt;&lt;&lt;/done&gt;&gt;</tw-passagedata><tw-passagedata pid="8" name="kaiIntro" tags="nobr" position="975,100" size="100,100">&lt;&lt;set $passage to &quot;kaiIntro&quot;&gt;&gt;&lt;&lt;set $module to &quot;Introduction&quot;&gt;&gt;
 &lt;div class=&quot;wrapper&quot;&gt;
   &lt;&lt;include &quot;header&quot;&gt;&gt;
+    /* &lt;h1 class=&quot;title top&quot;&gt;Hello - it&#39;s Kai again&lt;/h1&gt; */
   &lt;main class=&quot;speaking&quot;&gt;
-  &lt;h1 class=&quot;title&quot;&gt;Hello - it&#39;s Kai again&lt;/h1&gt;
-  &lt;p&gt;
-  If you are listening to me that means you must have my Gift to you, and you must have found the codeword to get in, so someone must have listened to the phone message. Great work.&lt;/p&gt;
-  /* / */
-  &lt;p&gt;Last time we spoke I introduced myself, and I told you some things about me. I told you that I work with Greenpeace and Coney and a bit about who Greenpeace and Coney are. &lt;/p&gt;
+ &lt;h1 class=&quot;title &quot;&gt;Hello - it&#39;s Kai again&lt;/h1&gt;
 
-  &lt;p&gt;I also told you that I&#39;m a playful activist but I didn&#39;t really tell you what that means… &lt;/p&gt;
-  /* / */
-  &lt;p&gt;Playful activists spark change through play.&lt;/p&gt;
-  &lt;p&gt;We do this through &#39;playfulness&#39; - which is an attitude.&lt;/p&gt;
-  &lt;p&gt;It&#39;s a way of relating to the world, to systems, and to the act of making change - we play with them.&lt;/p&gt;
-  &lt;p&gt;We also spark change through the act of &#39;playing&#39;.&lt;/p&gt;
-  &lt;p&gt;We create games or interactive experiences that ask questions, offer new solutions, and show the frank reality of how things are.&lt;/p&gt;
-  /* / */
-  &lt;p&gt;Together in this project we’ll be playful activists making a piece of Playful Climate Activism. &lt;/p&gt;
-  /* / */
-  &lt;p&gt;We’re going to be looking at Climate Change. &lt;/p&gt;
-  &lt;p&gt;Sorry, some people would like us to say Climate Change... but sometimes I find it hard to even get the words out of my mouth, because let’s be honest - it’s a Climate Emergency.&lt;/p&gt;
-  /* / */
-  &lt;p&gt;Change sounds natural, or even reversible, like changing your height by growing just a little bit taller.  No, I’m kidding 5ft 6 suits me fine thank you, and what we’re really looking at is destruction. It’s a crisis. &lt;/p&gt;
-  &lt;p&gt;As we’re at the start of the project, let’s work out where we’re starting from. &lt;/p&gt;
+    &lt;div class=&quot;text-wrapper&quot;&gt;
+      &lt;p&gt;  If you are listening to me that means you must have my Gift to you, and you must have found the codeword to get in, so someone must have listened to the phone message. Great work.&lt;/p&gt;
+      /* / */
+      &lt;p&gt;Last time we spoke I introduced myself, and I told you some things about me. I told you that I work with Greenpeace and Coney and a bit about who Greenpeace and Coney are. &lt;/p&gt;
+    
+      &lt;p&gt;I also told you that I&#39;m a playful activist but I didn&#39;t really tell you what that means… &lt;/p&gt;
+      /* / */
+      &lt;p&gt;Playful activists spark change through play.&lt;/p&gt;
+      &lt;p&gt;We do this through &#39;playfulness&#39; - which is an attitude.&lt;/p&gt;
+      &lt;p&gt;It&#39;s a way of relating to the world, to systems, and to the act of making change - we play with them.&lt;/p&gt;
+      &lt;p&gt;We also spark change through the act of &#39;playing&#39;.&lt;/p&gt;
+      &lt;p&gt;We create games or interactive experiences that ask questions, offer new solutions, and show the frank reality of how things are.&lt;/p&gt;
+      /* / */
+      &lt;p&gt;Together in this project we’ll be playful activists making a piece of Playful Climate Activism. &lt;/p&gt;
+      /* / */
+      &lt;p&gt;We’re going to be looking at Climate Change. &lt;/p&gt;
+      &lt;p&gt;Sorry, some people would like us to say Climate Change... but sometimes I find it hard to even get the words out of my mouth, because let’s be honest - it’s a Climate Emergency.&lt;/p&gt;
+      /* / */
+      &lt;p&gt;Change sounds natural, or even reversible, like changing your height by growing just a little bit taller.  No, I’m kidding 5ft 6 suits me fine thank you, and what we’re really looking at is destruction. It’s a crisis. &lt;/p&gt;
+      &lt;p&gt;As we’re at the start of the project, let’s work out where we’re starting from. &lt;/p&gt;
+         &lt;&lt;button &quot;next&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;goto &quot;CodewordMod3&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
+    &lt;/div&gt;
+  
+ 
 
-  &lt;&lt;button &quot;next&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;goto &quot;CodewordMod3&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
 &lt;/main&gt;
 &lt;&lt;include &quot;footer&quot;&gt;&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="9" name="CodewordMod3" tags="nobr" position="1100,100" size="100,100">&lt;&lt;set $passage to &quot;CodewordMod3&quot;&gt;&gt;
@@ -367,6 +372,7 @@ Let’s enter Module 3’s Codeword to dive in:
   &lt;div class=&quot;wrapper&quot;&gt;
     &lt;&lt;include &quot;header&quot;&gt;&gt;
     &lt;main  class=&quot;speaking&quot;&gt;
+        &lt;div class=&quot;text-wrapper&quot;&gt;
 &lt;p&gt;  You might have discussed how the planet is warming up because of human’s carbon emissions. You might have talked about cars, planes, or cows. &lt;/p&gt;
 /* / */
 &lt;p&gt;You might have spoken about how the richest 10% of people cause half the world’s total CO2 emissions. &lt;/p&gt;
@@ -405,6 +411,7 @@ She’s great.
 &lt;p&gt;I&#39;m going to hand over to Dr Mya-Rose Craig now – &lt;/p&gt;
     
    &lt;p&gt; Click &lt;&lt;button &quot;Move On&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;goto &quot;mod3vid&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;when you are ready. &lt;/p&gt;
+   &lt;/div&gt;
     &lt;/main&gt;
          &lt;&lt;include &quot;footer&quot;&gt;&gt;
   &lt;/div&gt;</tw-passagedata><tw-passagedata pid="11" name="mod3vid" tags="nobr" position="100,225" size="100,100">&lt;&lt;set $passage to &quot;mod3vid&quot;&gt;&gt;
@@ -419,6 +426,7 @@ She’s great.
 &lt;div class=&quot;wrapper&quot;&gt;
   &lt;&lt;include &quot;header&quot;&gt;&gt;
   &lt;main class=&quot;speaking&quot;&gt;
+      &lt;div class=&quot;text-wrapper&quot;&gt;
   &lt;p&gt; 3.18&lt;/p&gt;
 &lt;p&gt;Ok, let’s hold there, we’ve just heard a lot and let’s sit with it for a second. &lt;/p&gt;
 &lt;p&gt;
@@ -433,6 +441,7 @@ She’s great.
 
 
 &lt;p&gt;When ready click &lt;&lt;button &quot;Move On&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;goto &quot;mod1int2&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/p&gt;
+&lt;/div&gt;
 
   &lt;/main&gt;
      &lt;&lt;include &quot;footer&quot;&gt;&gt;
@@ -440,6 +449,7 @@ She’s great.
 &lt;div class=&quot;wrapper&quot;&gt;
   &lt;&lt;include &quot;header&quot;&gt;&gt;
   &lt;main class=&quot;speaking&quot;&gt;
+      &lt;div class=&quot;text-wrapper&quot;&gt;
   &lt;p&gt; 6.25&lt;/p&gt;
 &lt;p&gt;Ok let’s pause again for a moment. &lt;/p&gt;
 &lt;p&gt;Mya-Rose has covered a lot – the drastic inequality of those who are living with the impacts of the climate crisis yet causing the least pollution. And we’ve heard lots about palm oil too…like lots of things, the raw ingredient of palm oil itself isn’t bad, but when it’s commercially extracted (like Unilever do) that’s when we get 250,000 football pitches worth of deforestation. &lt;/p&gt;
@@ -452,13 +462,14 @@ She’s great.
 
 
 &lt;p&gt;When ready click &lt;&lt;button &quot;Move On&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;goto &quot;mod1int3&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/p&gt;
-
+&lt;/div&gt;
   &lt;/main&gt;
      &lt;&lt;include &quot;footer&quot;&gt;&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="14" name="mod1int3" tags="nobr" position="475,225" size="100,100">&lt;&lt;set $passage to &quot;mod1int3&quot;&gt;&gt;
 &lt;div class=&quot;wrapper&quot;&gt;
   &lt;&lt;include &quot;header&quot;&gt;&gt;
   &lt;main class=&quot;speaking&quot;&gt;
+      &lt;div class=&quot;text-wrapper&quot;&gt;
   &lt;p&gt; 9.10&lt;/p&gt;
 &lt;p&gt;Thanks Mya-Rose. &lt;/p&gt;
 &lt;p&gt;We’ll move on in a moment, but before we do, let’s reflect on what we’ve just heard.&lt;/p&gt; 
@@ -471,13 +482,14 @@ She’s great.
 &lt;/ul&gt;
 
 &lt;p&gt;I’d recommend 5 minutes to chat here, and when ready click &lt;&lt;button &quot;Move On&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;goto &quot;mod3outro&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/p&gt;
-
+&lt;/div&gt;
   &lt;/main&gt;
      &lt;&lt;include &quot;footer&quot;&gt;&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="15" name="mod3outro" tags="nobr" position="600,225" size="100,100">&lt;&lt;set $passage to &quot;mod1int3&quot;&gt;&gt;
 &lt;div class=&quot;wrapper&quot;&gt;
   &lt;&lt;include &quot;header&quot;&gt;&gt;
   &lt;main class=&quot;speaking&quot;&gt;
+      &lt;div class=&quot;text-wrapper&quot;&gt;
 &lt;p&gt;You might have found that video hard to watch &lt;/p&gt;
 &lt;p&gt;You might have been upset by what you saw. &lt;/p&gt;
 &lt;p&gt;You might feel angry, numb, frustrated &lt;/p&gt;
@@ -505,6 +517,7 @@ She’s great.
 &lt;p&gt;And how we mod it.&lt;/p&gt; 
 /* / */
 &lt;&lt;button &quot;Next&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;set $mod3 to true&gt;&gt;&lt;&lt;goto &quot;CodewordMod4&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
+&lt;/div&gt;
 &lt;/main&gt;
      &lt;&lt;include &quot;footer&quot;&gt;&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="16" name="CodewordMod4" tags="nobr" position="725,225" size="100,100">&lt;&lt;set $passage to &quot;CodewordMod4&quot;&gt;&gt;
@@ -549,7 +562,7 @@ Enter the Module 4 Codeword:
 &lt;div class=&quot;wrapper&quot;&gt;
   &lt;&lt;include &quot;header&quot;&gt;&gt;
   &lt;main class=&quot;speaking&quot;&gt;
-
+    &lt;div class=&quot;text-wrapper&quot;&gt;
 &lt;p&gt;
 Anyone like Potatoes? Amazing – everyone. I can’t see so I’ll just make up what I’d like to think is happening. &lt;/p&gt;
 &lt;p&gt;We’re going to play a game called Roast-The-Potato. &lt;/p&gt;
@@ -560,14 +573,14 @@ Anyone like Potatoes? Amazing – everyone. I can’t see so I’ll just make up
 &lt;p&gt;Teacher I’ll hand over to you to explain how to Roast.  &lt;/p&gt;
 
 &lt;p&gt;When you have finished click &lt;&lt;button &quot;Move On&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;goto &quot;mod4outro&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/p&gt;
-
+&lt;/div&gt;
  &lt;/main&gt;
      &lt;&lt;include &quot;footer&quot;&gt;&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="18" name="mod4outro" tags="nobr" position="975,225" size="100,100">&lt;&lt;set $passage to &quot;mod4outro&quot;&gt;&gt;
 &lt;div class=&quot;wrapper&quot;&gt;
   &lt;&lt;include &quot;header&quot;&gt;&gt;
   &lt;main class=&quot;speaking&quot;&gt;
-
+    &lt;div class=&quot;text-wrapper&quot;&gt;
 &lt;p&gt;
 We play games of systems not to reduce them, not to suggest they are unreal, not to forget the violence they cause.&lt;/p&gt;
 &lt;p&gt;We play games of systems because games can change.&lt;/p&gt;
@@ -588,14 +601,14 @@ We play games of systems not to reduce them, not to suggest they are unreal, not
 &lt;p&gt;Isn’t it time we played a different game?&lt;/p&gt;
 
 &lt;&lt;button &quot;Next&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;set $mod4 to true&gt;&gt;&lt;&lt;goto &quot;mod4outrob&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
-
+&lt;/div&gt;
  &lt;/main&gt;
      &lt;&lt;include &quot;footer&quot;&gt;&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="19" name="mod4outrob" tags="nobr" position="1100,225" size="100,100">&lt;&lt;set $passage to &quot;mod4outrob&quot;&gt;&gt;
 &lt;div class=&quot;wrapper&quot;&gt;
   &lt;&lt;include &quot;header&quot;&gt;&gt;
   &lt;main class=&quot;speaking&quot;&gt;
-
+    &lt;div class=&quot;text-wrapper&quot;&gt;
 &lt;p&gt;That’s it for this week. &lt;/p&gt;
 
 &lt;p&gt;Oh yeah, a codeword. To get into the next session of the box you’ll need one.  &lt;/p&gt;
@@ -604,6 +617,7 @@ We play games of systems not to reduce them, not to suggest they are unreal, not
 &lt;p&gt;Take care. &lt;/p&gt;
 
 &lt;&lt;button &quot;Finish&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;goto &quot;landing&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
+&lt;/div&gt;
   &lt;/main&gt;
      &lt;&lt;include &quot;footer&quot;&gt;&gt;
 &lt;/div&gt;</tw-passagedata></tw-storydata>
